# log_system

./: CMakeLists.txt  Makefile  README.md  config.ini  log_system.c  log_system.h  main.c
examples/: main.c
inc/: log_system.h
inih/: ini.c
src/: config.ini  log_system.c  log_system.h  log_system_server.c
